--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,94 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@layer base {
+
+    @font-face {
+        font-family: 'Poppins';
+        src: local('Poppins SemiBold'), local('Poppins-SemiBold'),
+            url('../public/assets/fonts/Poppins-SemiBold.ttf') format('truetype');
+        font-weight: 600;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: 'Poppins';
+        src: local('Poppins Black'), local('Poppins-Black'),
+            url('../public/assets/fonts/Poppins-Black.ttf') format('truetype');
+        font-weight: 900;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: 'Poppins';
+        src: local('Poppins Light'), local('Poppins-Light'),
+            url('../public/assets/fonts/Poppins-Light.ttf') format('truetype');
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: 'Poppins';
+        src: local('Poppins Medium'), local('Poppins-Medium'),
+            url('../public/assets/fonts/Poppins-Medium.ttf') format('truetype');
+        font-weight: 500;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: 'Poppins';
+        src: local('Poppins Regular'), local('Poppins-Regular'),
+            url('../public/assets/fonts/Poppins-Regular.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: 'Poppins';
+        src: local('Poppins Bold'), local('Poppins-Bold'),
+            url('../public/assets/fonts/Poppins-Bold.ttf') format('truetype');
+        font-weight: bold;
+        font-style: normal;
+        font-display: swap;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.form-label {
+    @apply text-sm font-normal font-['Poppins'] leading-snug inline-block mb-2
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.form-error {
+    @apply text-sm font-normal font-['Poppins'] text-red-600
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.form-label span {
+    @apply text-red-600 pe-0.5
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.form-input {
+    @apply min-h-8 p-3 border border-[#D9D9D9] text-black text-sm font-normal font-['Poppins'] leading-snug rounded-[2px] block w-full placeholder:text-[#D9D9D9] outline-none focus:outline-[#3366FF]
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.sr-only {
+    @apply hidden
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.blue-fill-btn {
+    @apply px-4 py-2 rounded-lg bg-dark-blue text-white text-sm font-medium hover:opacity-85 transition-all duration-300 block w-fit
+}
+.border-btn{
+   @apply px-4 py-2 rounded-lg bg-transparent text-[#607487] text-sm font-medium border border-[#607487] hover:bg-[#607487] hover:text-white
+    block w-fit transition-all duration-300
+}
+.model-close-btn{
+    @apply border border-[#EEF1F6] bg-white hover:bg-dark-blue/10 rounded-3xl p-2
+}
+.tab-style{
+    @apply py-6 px-4 font-medium relative duration-300 after:w-full hover:text-black/80 text-lg lg:text-xl xl:text-2xl after:h-2 after:bg-dark-blue after:-bottom-2 after:absolute after:left-0 after:rounded after:transition-opacity before:h-1/2 after:my-auto before:bg-black/10 before:absolute before:top-auto before:bottom-auto before:right-0 before:w-[1px]
 }
